# voraus-debian-iso

./: .cruft.json  .gitignore  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  README.rst  jreleaser.yml  pyproject.toml  sonar-project.properties  tox.ini
.github/: CODEOWNERS
.github/workflows/: build.yml  link_to_docs.yml  pipeline.yml  publish.yml  test.yml
docs/: conf.py  development.rst  get_started.rst  index.rst
docs/_scripts/: generate_license_information.py
docs/_static/default/css/: custom.css
src/voraus_debian_iso/: __init__.py  constants.py
src/voraus_debian_iso/cli/: __init__.py  build.py  install.py  main.py  start.py  stop.py
src/voraus_debian_iso/data/isolinux/: menu.cfg  txt.cfg
src/voraus_debian_iso/data/preseed/: preseed.cfg
src/voraus_debian_iso/methods/: __init__.py  shell.py
src/voraus_debian_iso/methods/cli/: __init__.py  cli_build_methods.py  cli_common_methods.py  cli_install_methods.py  cli_start_methods.py  cli_stop_methods.py
src/voraus_runtime/: __init__.py  constants.py
src/voraus_runtime/cli/: build.py  main.py
src/voraus_runtime/data/grub/: grub.cfg
src/voraus_runtime/methods/: shell.py
src/voraus_runtime/methods/cli/: cli_build_methods.py
tests/: conftest.py
tests/integration/: test_base_os.py  test_iso.py
tests/unit/: test_app_functions.py
